# charon

./: .dockerignore  .gitignore  Dockerfile  Makefile.am  README.md  charon.pc.in  configure.ac
data/: Makefile.am  testenv.pem
data/gloox-patches/: 01-pubsub-cleanup.diff  02-gnutls-cacert.diff
doc/: protocol.md  xmldata.md
docker/lib/: Dockerfile
docker/utils/: Dockerfile
src/: Makefile.am  client.cpp  client.hpp  client_tests.cpp  notifications.cpp  notifications.hpp  pubsub.cpp  pubsub_tests.cpp  rpcserver.cpp  rpcserver.hpp  rpcserver_tests.cpp  rpcwaiter.cpp  rpcwaiter.hpp  rpcwaiter_tests.cpp  server.cpp  server.hpp  server_tests.cpp  stanzas.cpp  stanzas_tests.cpp  testutils.cpp  testutils.hpp  waiterthread.cpp  waiterthread.hpp  waiterthread_tests.cpp  xmldata.cpp  xmldata.hpp  xmldata_internal.hpp  xmldata_tests.cpp  xmppclient.cpp  xmppclient.hpp  xmppclient_tests.cpp
src/private/: pubsub.hpp  stanzas.hpp  xmppclient.hpp
src/rpc-stubs/: testbackend.json
test/: Makefile.am  basic_calls.py  charonbin.py  method_selection.py  rpcserver.py  server_version.py  testcase.py  testspec.json  waitforchange.py  xmpp_restart.py
test/env/: README.md  docker-compose-cluster.yml  docker-compose-solo.yml  docker-compose.yml  run.sh  start-cluster.sh  start-solo.sh
test/env/image/: Dockerfile  ejabberd.pem  ejabberd.yml  ejabberdctl.cfg  entrypoint.sh  run.sh
util/: .gitignore  Makefile.am  client.cpp  main-client.cpp  main-server.cpp  methods.cpp  methods.hpp  server.cpp  test.cpp  util-client.cpp  util-client.hpp
